--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -26,7 +26,7 @@
           <%# Filters %>
           <div class="stores-maps__filters">
 
-            <p class="hide-visually">Filter stores by <strong>Category</strong> and whether they accept <strong>Gift cards</strong>.</p>
+            <p class="stores-maps__intro hide-visually">Filter stores by <strong>Category</strong> and whether they accept <strong>Gift cards</strong>.</p>
 
             <%# Category %>
             <%# [BACKEND] When a category has been selected remove the Category filter HTML from the DOM, if cannot remove from the DOM then append `hide-fully` class to this `div` %>
