Review all buttons to check they have relevant type attrs - WSF-6097

--- a/app/views/layouts/_global_search.html.erb
+++ b/app/views/layouts/_global_search.html.erb
@@ -39,7 +39,7 @@
         <%# //Search results %>
 
         <%# Close search %>
-        <button class="btn header__overlay__close-btn hide-fully--non-palm js-disabled-hide" type="button" aria-owns="site-search" toggle-visibility="site-search">
+        <button type="button" class="btn header__overlay__close-btn hide-fully--non-palm js-disabled-hide" aria-owns="site-search" toggle-visibility="site-search">
           <span class="hide-visually">Close search</span>
           <span class="icon icon--close-lrg" aria-hidden="true"></span>
         </button>
