--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -59,7 +59,7 @@
           <%# //Filters %>
 
           <%# List/map toggle %>
-          <button class="stores-maps__toggle btn btn--main btn--main-white btn--main-compact-icon js-stores-maps-toggle-btn" aria-owns="stores-maps-toggle-listing-detail stores-maps-toggle-map">
+          <button type="button" class="stores-maps__toggle btn btn--main btn--main-white btn--main-compact-icon js-stores-maps-toggle-btn" aria-owns="stores-maps-toggle-listing-detail stores-maps-toggle-map">
             <span class="hide-visually">View <span class="js-stores-maps-toggle-btn-txt">map</span></span>
             <span class="icon icon--map2 icon--lrg" aria-hidden="true"></span>
             <span class="icon icon--list icon--lrg" aria-hidden="true"></span>
