--- a/app/views/layouts/_header_national.html
+++ b/app/views/layouts/_header_national.html
@@ -58,7 +58,7 @@
 			<nav class="header-centre-select-national hide-fully--palm-inline-block" role="navigation">
 				<h1>Choose a <span class="hide-visually">centre to see products, deals, events, and centre info:</span></h1>
 				<div class="drop-down-menu drop-down-container">
-          <button class="drop-down-menu__trigger btn btn--main btn--main-dark btn--pointer btn--pointer-padding-med" toggle-visibility="header-menu-toggle-non-palm">Westfield Centre<span aria-hidden="true" class="icon icon--lrg icon--arrow-down-full btn--pointer__icon"></span></button>
+          <button type="button" class="drop-down-menu__trigger btn btn--main btn--main-dark btn--pointer btn--pointer-padding-med" toggle-visibility="header-menu-toggle-non-palm">Westfield Centre<span aria-hidden="true" class="icon icon--lrg icon--arrow-down-full btn--pointer__icon"></span></button>
           <div class="drop-down-menu__target drop-down pointer-up box box--drop-down" id="header-menu-toggle-non-palm">
           	<dl class="drop-down-menu__list">
       				<% %w(NSW ACT QLD VIC SA WA).each do |state| %>
