--- a/app/views/centre_hours/show.html.erb
+++ b/app/views/centre_hours/show.html.erb
@@ -5,7 +5,7 @@
   <div class="tabs">
 
     <%# Nav contextual %>
-    <div class="nav-contextual js-nav-contextual js-viewport-check">
+    <div class="nav-contextual js-nav-contextual js-viewport-check js-disabled-hide">
       <div class="nav-contextual__clip">
         <div class="nav-contextual__clip__inner">
           <ul class="tab__nav nav-contextual__list js-nav-contextual-list horiz-list">
