--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -363,7 +363,7 @@
 
 <%# Expose Product categories for non JS users %>
 <noscript>
-  <nav role="navigation" class="island box mrg-base mrg-base--top">
+  <nav role="navigation" class="island box mrg-base mrg-base-top">
     <h2>Product categories</h2>
     <ul class="mrg-base">
       <% @search.categories.each do |category| %>
