--- a/app/assets/stylesheets/partials/layout/_header.scss
+++ b/app/assets/stylesheets/partials/layout/_header.scss
@@ -1549,6 +1549,13 @@ $hero-banner-height-lrg: 380 !default;
 				.js .header--national &.drop-down {display: none;}
 	  	}
 
+	  	/* Non JS users */
+		  .no-js & {
+		  	display: block;
+		  	background: none;
+		  	border: 0;
+		  }
+
 			/* --Shared rules-- */
 
 			/* Common font family and size */
@@ -1566,7 +1573,12 @@ $hero-banner-height-lrg: 380 !default;
 			.header__tabs__hdr {
 				border-bottom: 1px solid $color-grey-dark-3;
 
-				h1 {font-weight: normal;}
+				h1 {
+					font-weight: normal;
+
+					/* Non JS users */
+					.no-js & {color: $color-txt-base;}
+				}
 			}
 
 			/* --Tab nav-- */
@@ -1601,12 +1613,6 @@ $hero-banner-height-lrg: 380 !default;
 			  .touch & {
 			  	overflow-y: scroll;
 			  	-webkit-overflow-scrolling: touch;
-			  }
-
-			  /* Non JS users */
-			  .no-js & {
-			  	max-height: none;
-			  	overflow: visible;
 			  }
 
 				/* Shared rules */
