--- a/app/views/centre_info/_social_media.html.erb
+++ b/app/views/centre_info/_social_media.html.erb
@@ -1,112 +1,105 @@
 <%# Follow Us - list of social media %>
 <% if social_media.present? %>
-<section aria-labelledby="follow-us">
-  <div class="txt-formatted">
-    <h2 id="follow-us" class="mrg-base">Follow Us</h2>
-  </div>
-  <ul class="grid grid--mrg-base-non-palm grid--non-linear">
-    <%# Facebook %>
-    <% if @centre.facebook.present? %>
-      <li class="grid__item one-half non-palm-one-quarter">
-        <a href="<%= @centre.facebook %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
-          <div class="flag__img">
-            <div class="box islet">
-              <span class="icon icon--facebook icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
-            </div>
-          </div>
-          <div class="flag__body">
-            Facebook
-          </div>
-        </a>
-      </li>
-    <% end %>
-    <%# //Facebook %>
+  <section aria-labelledby="follow-us">
 
-    <%# Twitter %>
-    <% if @centre.twitter.present? %>
-      <li class="grid__item one-half non-palm-one-quarter">
-        <a href="<%= @centre.twitter %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
-          <div class="flag__img">
-            <div class="box islet">
-              <span class="icon icon--twitter icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
-            </div>
-          </div>
-          <div class="flag__body">
-            Twitter
-          </div>
-        </a>
-      </li>
-    <% end %>
-    <%# //Twitter %>
+    <div class="txt-formatted">
+      <h2 id="follow-us" class="mrg-base">Follow Us</h2>
+    </div>
 
-    <%# Instagram %>
-    <% if @centre.instagram.present? %>
-      <li class="grid__item one-half non-palm-one-quarter">
-        <a href="<%= @centre.instagram %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
-          <div class="flag__img">
-            <div class="box islet">
-              <span class="icon icon--instagram icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
-            </div>
-          </div>
-          <div class="flag__body">
-            Instagram
-          </div>
-        </a>
-      </li>
-    <% end %>
-    <%# //Instagram %>
+    <ul class="grid grid--mrg-base-non-palm grid--non-linear">
 
-    <%# Pinterest %>
-    <% if @centre.pinterest.present? %>
-      <li class="grid__item one-half non-palm-one-quarter">
-        <a href="<%= @centre.pinterest %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
-          <div class="flag__img">
-            <div class="box islet">
-              <span class="icon icon--pinterest icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
+      <%# Facebook %>
+      <% if @centre.facebook.present? %>
+        <li class="grid__item one-half non-palm-one-quarter">
+          <a href="<%= @centre.facebook %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
+            <div class="flag__img">
+              <div class="box islet">
+                <span class="icon icon--facebook icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
+              </div>
             </div>
-          </div>
-          <div class="flag__body">
-            Pinterest
-          </div>
-        </a>
-      </li>
-    <% end %>
-    <%# //Pinterest %>
+            <div class="flag__body">Facebook</div>
+          </a>
+        </li>
+      <% end %>
+      <%# //Facebook %>
 
-    <%# YouTube %>
-    <% if @centre.youtube.present? %>
-      <li class="grid__item one-half non-palm-one-quarter">
-        <a href="<%= @centre.youtube %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
-          <div class="flag__img">
-            <div class="box islet">
-              <span class="icon icon--youtube icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
+      <%# Twitter %>
+      <% if @centre.twitter.present? %>
+        <li class="grid__item one-half non-palm-one-quarter">
+          <a href="<%= @centre.twitter %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
+            <div class="flag__img">
+              <div class="box islet">
+                <span class="icon icon--twitter icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
+              </div>
             </div>
-          </div>
-          <div class="flag__body">
-            YouTube
-          </div>
-        </a>
-      </li>
-    <% end %>
-    <%# //YouTube %>
+            <div class="flag__body">Twitter</div>
+          </a>
+        </li>
+      <% end %>
+      <%# //Twitter %>
 
-    <%# Google+ %>
-    <% if @centre.google_plus.present? %>
-      <li class="grid__item one-half non-palm-one-quarter">
-        <a href="<%= @centre.google_plus %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
-          <div class="flag__img">
-            <div class="box islet">
-              <span class="icon icon--google-plus icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
+      <%# Instagram %>
+      <% if @centre.instagram.present? %>
+        <li class="grid__item one-half non-palm-one-quarter">
+          <a href="<%= @centre.instagram %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
+            <div class="flag__img">
+              <div class="box islet">
+                <span class="icon icon--instagram icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
+              </div>
             </div>
-          </div>
-          <div class="flag__body">
-            Google+
-          </div>
-        </a>
-      </li>
-    <% end %>
-    <%# //Google+ %>
-  </ul>
-</section>
+            <div class="flag__body">Instagram</div>
+          </a>
+        </li>
+      <% end %>
+      <%# //Instagram %>
+
+      <%# Pinterest %>
+      <% if @centre.pinterest.present? %>
+        <li class="grid__item one-half non-palm-one-quarter">
+          <a href="<%= @centre.pinterest %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
+            <div class="flag__img">
+              <div class="box islet">
+                <span class="icon icon--pinterest icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
+              </div>
+            </div>
+            <div class="flag__body">Pinterest</div>
+          </a>
+        </li>
+      <% end %>
+      <%# //Pinterest %>
+
+      <%# YouTube %>
+      <% if @centre.youtube.present? %>
+        <li class="grid__item one-half non-palm-one-quarter">
+          <a href="<%= @centre.youtube %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
+            <div class="flag__img">
+              <div class="box islet">
+                <span class="icon icon--youtube icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
+              </div>
+            </div>
+            <div class="flag__body">YouTube</div>
+          </a>
+        </li>
+      <% end %>
+      <%# //YouTube %>
+
+      <%# Google+ %>
+      <% if @centre.google_plus.present? %>
+        <li class="grid__item one-half non-palm-one-quarter">
+          <a href="<%= @centre.google_plus %>" class="flag flag--shrink-wrap social-follow" rel="external" target="_blank">
+            <div class="flag__img">
+              <div class="box islet">
+                <span class="icon icon--google-plus icon--base-color icon--fixed-width icon--flush-top" aria-hidden="true"></span>
+              </div>
+            </div>
+            <div class="flag__body">Google+</div>
+          </a>
+        </li>
+      <% end %>
+      <%# //Google+ %>
+
+    </ul>
+
+  </section>
 <% end %>
 <%# //Follow Us - list of social media %>
