--- a/app/views/centre_info/_footer.html.erb
+++ b/app/views/centre_info/_footer.html.erb
@@ -1,4 +1,5 @@
-<%= render "shared/footer_promo_tiles", 
+<%# Footer promo tiles %>
+<%= render "shared/footer_promo_tiles",
   promo_tile_1: {
     image_src: "promo-tiles/promo-tile-01.jpg",
     icon: "icon--hours",
@@ -16,3 +17,4 @@
     link_url: centre_services_path(@centre)
   }
 %>
+<%# //Footer promo tiles %>
