--- a/app/views/deals/show.html.erb
+++ b/app/views/deals/show.html.erb
@@ -5,7 +5,15 @@
     <div class="island detail-view__divider--palm">
       <header class="deal-main box box--torn">
         <h1 class="deal-main__hdr h1"><%= @deal.title %></h1>
-        <p class="deal-main__meta">from <%= @store.name %> <span>Deal from  <time datetime="<%= @deal.available_from.strftime("%Y-%m-%d") %>"><%= @deal.available_from.strftime("%A %e %B") %></time> to <time datetime="<%= @deal.available_to.strftime("%Y-%m-%d") %>"><%= @deal.available_to.strftime("%A %e %B") %></time></span></p>
+        <p class="deal-main__meta">
+          from <%= @store.name %>
+          <span>
+            Deal from
+            <time datetime="<%= @deal.available_from.strftime("%Y-%m-%d") %>"><%= @deal.available_from.strftime("%A %e %B") %></time>
+            to
+            <time datetime="<%= @deal.available_to.strftime("%Y-%m-%d") %>"><%= @deal.available_to.strftime("%A %e %B") %></time>
+          </span>
+        </p>
       </header>
     </div>
   </div>
@@ -22,19 +30,35 @@
 
     <%# Contact store %>
     <div class="island-sides islet-ends island--fill island--center">
+
+      <%# Palm version %>
       <span class="hide-fully--non-palm">
         <%= phone_link @store.phone_number, class: 'btn btn--full btn--main btn--main-dark btn--main-lrg' do |phone_number| %>
-          <span class="icon icon--phone icon--xlrg icon--spacing-lrg icon--flush-top" aria-hidden="true"></span><strong>Call <%= @store.name %></strong>
+          <span class="icon icon--phone icon--xlrg icon--spacing-lrg icon--flush-top" aria-hidden="true"></span>
+          <strong>Call <%= @store.name %></strong>
         <% end %>
       </span>
-      <p class="detail-view__check-avble hide-fully--palm"><span class="detail-view__subtle-txt">Check store availability</span> <em><span class="icon icon--phone icon--lrg icon--spacing" aria-hidden="true"></span> <%= @store.phone_number %></em></p>
+      <%# //Palm version %>
+
+      <%# Non-palm version %>
+      <p class="detail-view__check-avble hide-fully--palm">
+        <span class="detail-view__subtle-txt">Check store availability</span>
+        <em>
+          <span class="icon icon--phone icon--lrg icon--spacing" aria-hidden="true"></span>
+          <%= @store.phone_number %>
+        </em>
+      </p>
+      <%# //Non-palm version %>
+
     </div>
     <%# //Contact store %>
 
   </div>
   <%# //Store location & contact store %>
 
+  <%# Divider %>
   <span class="detail-view__divider--col-line hide-fully--palm"></span>
+  <%# //Divider %>
 
 </div>
 
@@ -45,7 +69,12 @@
     <ul class="detail-view__mrg-base">
       <% @deal.stores[0..2].each do |store| %>
         <% unless store.id == @store.id %>
-          <li><a href="<%= centre_deal_path(store.centre.code, @deal.retailer_code, @deal.id)%>" class="list-divider"><span class="icon icon--pin icon--lrg icon--spacing-lrg icon--base-color" aria-hidden="true"></span><%= store.centre.name %><span class="icon icon--arrow-right icon--lrg icon--base-color" aria-hidden="true"></span></a></li>
+          <li>
+            <a href="<%= centre_deal_path(store.centre.code, @deal.retailer_code, @deal.id)%>" class="list-divider">
+              <span class="icon icon--pin icon--lrg icon--spacing-lrg icon--base-color" aria-hidden="true"></span><%= store.centre.name %>
+              <span class="icon icon--arrow-right icon--lrg icon--base-color" aria-hidden="true"></span>
+            </a>
+          </li>
         <% end %>
       <% end %>
     </ul>
@@ -72,7 +101,6 @@
 
   <script>
     $(function() {
-
       // Run 'Toggle content' plugin
       $('.js-toggle-content').toggleContent({
         btnTxtOpen: 'Read the fine print <span aria-hidden="true" class="icon icon--arrow-down-full icon--lrg"></span>',
