--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,6 +1,8 @@
 <div itemscope itemtype="http://data-vocabulary.org/Event">
 
   <div class="island detail-view__divider">
+
+    <%# Event name, date & location %>
     <header class="detail-view__mrg-base">
       <h1 class="detail-view__hdr hn" itemprop="summary"><%= @event.name %></h1>
       <ul class="detail-view__meta detail-view__divider detail-view__divider--top-btm islet-ends horiz-list horiz-list--fit">
@@ -10,7 +12,9 @@
         <% end %>
       </ul>
     </header>
+    <%# //Event name, date & location %>
 
+    <%# Event image %>
     <div class="detail-view__media detail-view__mrg-base" itemprop="photo">
       <%= fetch_image_tag @event.image,
         alt: "",
@@ -19,30 +23,33 @@
         format: :auto
       %>
     </div>
+    <%# //Event image %>
 
+    <%# Event description %>
     <%- if @event.description.present? -%>
-    <section aria-labelledby="event-details">
-      <h2 class="detail-view__hdr-sub hn" id="event-details">Event Details</h2>
-      <div class="detail-view__desc" itemprop="description">
-        <% to_paragraphs(@event.description).each do |text| %>
-          <p><%= text %></p>
-        <%- end %>
-      </div>
-    </section>
+      <section aria-labelledby="event-details">
+        <h2 class="detail-view__hdr-sub hn" id="event-details">Event Details</h2>
+        <div class="detail-view__desc" itemprop="description">
+          <% to_paragraphs(@event.description).each do |text| %>
+            <p><%= text %></p>
+          <%- end %>
+        </div>
+      </section>
     <% end %>
+    <%# //Event description %>
 
   </div>
 
+  <%# Event schedule %>
   <section class="detail-view__schedule island" aria-labelledby="event-schedule">
     <h2 class="detail-view__hdr-sub hn" id="event-schedule">Event Schedule</h2>
-
-    <%# Event schedule %>
     <dl class="timeline">
       <% @event.event_times_grouped_by_date.each do |date, occurrences| %>
         <dt>
           <%= date.strftime("%A") %>
           <em class="timeline__date">
-            <span><%= date.strftime("%e") %></span> <abbr title="<%= date.strftime("%B") %>"><%= date.strftime("%b") %></abbr>
+            <span><%= date.strftime("%e") %></span>
+            <abbr title="<%= date.strftime("%B") %>"><%= date.strftime("%b") %></abbr>
           </em>
         </dt>
         <% occurrences.each do |occurrence| %>
@@ -52,9 +59,7 @@
         <% end %>
       <% end %>
     </dl>
-    <%# //Event schedule %>
-
   </section>
-  <%# //Event details %>
+  <%# //Event schedule %>
 
 </div>
