--- a/app/views/layouts/detail_view.html.erb
+++ b/app/views/layouts/detail_view.html.erb
@@ -12,7 +12,10 @@
     <div class="detail-view__controls detail-view__divider">
       <%= render "/shared/social_share", kind: meta.kind, id: meta.id %>
       <% if in_lightbox? %>
-        <button type="button" class="btn"><span class="icon icon--close-sml icon--flush-top" aria-hidden="true"></span><span class="hide-visually"> Close</span></button>
+        <button type="button" class="btn">
+          <span class="icon icon--close-sml icon--flush-top" aria-hidden="true"></span>
+          <span class="hide-visually"> Close</span>
+        </button>
       <% end %>
     </div>
   <% end %>
